fixed the icons issue, please try how the button look on the homepage and inform me

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,4 +1,4 @@
-<%= image_tag "airp.jpg", style: "width:100%; height: 300px; object-fit:cover;" %>
+<%= image_tag "airp.jpg", class: "main-page-img" %>
 <%# <img src="https://images.unsplash.com/photo-1510832303954-cc30cbf2b8db" style="width:100%; height: 300px; object-fit: cover;">%>
 <div class="main-container">
 
