--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -1,20 +1,17 @@
  <div class="bottom-bar">
       <div class="bottom-button">
         <%= link_to root_path do %>
-        <p style="font-size: 39px;">⌂</p>
-        <%# <p>Home</p> %>
+        <i class="fas fa-home"></i>
         <% end %>
       </div>
       <div class="bottom-button">
         <%= link_to trips_path do %>
-        <p class='' style="font-size: 34px;">✈</p>
-        <%# <p>Trips</p> %>
+        <i class="fas fa-plane"></i>
         <% end %>
       </div>
       <div class="bottom-button">
         <%= link_to profile_path do %>
-        <i class='far fa-user-circle'></i>
-<%#         <p>Profile</p> %>
+        <i class="fas fa-user-circle"></i>
         <% end %>
       </div>
     </div>
