--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -208,9 +208,21 @@ html, body, .container{
 .modal-body ul {
   padding-left: 10px;
 }
-
+.main-page-img {
+  width:100%;
+  height: 300px;
+  object-fit:cover;
+}
 
 @keyframes fade {
     0%,100% { opacity: 0 }
     100% { opacity: 1 }
   }
+@media screen and (max-height: 800px) {
+  .main-page-img {
+    margin-top: -50px;
+  }
+  .main-container {
+    height: 45%;
+  }
+}
