--- a/app/views/flights/index.html.erb
+++ b/app/views/flights/index.html.erb
@@ -2,8 +2,8 @@
 @indbound_flights %>
 
 <div class="container-show">
-  <h2> book your outbound flight! </h2>
+  <h2> Outbound flights </h2>
   <%= render "booking", flight_instance: @outbound, results: @outbound_flights %>
-  <h2> book your inbound flight! </h2>
+  <h2> Inbound flights </h2>
   <%= render "booking", flight_instance: @inbound, results: @inbound_flights %>
 </div>
