--- a/app/assets/stylesheets/pages/_index.scss
+++ b/app/assets/stylesheets/pages/_index.scss
@@ -24,6 +24,7 @@
 .container-show{
   h2 {
     color: black;
+    margin-bottom: -1.3rem;
   }
 }
 
@@ -34,6 +35,9 @@
      justify-content: space-between;
      align-items: center;
      align-content: center;
+  h5{
+    margin-bottom: 0px;
+  }
 }
 
 
@@ -59,6 +63,7 @@
   flex-direction: column;
   justify-content: space-between;
   padding: 6px;
+  text-align: right;
 }
 
 
@@ -72,6 +77,10 @@
   p {
     margin: 0;
   }
+  hr {
+    margin-top: 0;
+    margin-bottom: 0.5rem;
+  }
 }
 
 .top-mark-index {
@@ -79,4 +88,22 @@
   position: relative;
   bottom: 15px;
   margin-top: 30px;
+}
+
+.main-add-map-index-2{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-color: $brand;
+  font-size: 24px;
+  padding: 5px 20px;
+  border-radius: 10px;
+  text-decoration: none;
+  color: white;
+  width: 100%;
+  text-align: center;
+  font-weight: bold;
+  input{
+    font-weight: bold;
+  }
 }
