--- a/app/views/trip_flights/new.html.erb
+++ b/app/views/trip_flights/new.html.erb
@@ -19,16 +19,17 @@
         <%= f.simple_fields_for :departure_flight do |flight| %>
           <%= flight.input :departure, collection: Airports.all.select {|airport| airport.country == @trip.home}.sort_by(&:name), label_method: :name, value_method: :iata, input_html: { class: '' } %>
           <%= flight.input :destination, collection: Airports.all.select {|airport| airport.country == @trip.destination}.sort_by(&:name), label_method: :name, value_method: :iata, input_html: { class: '' } %>
-          <%= flight.input :date, as: :string, required: false, input_html: {class: "datepicker"} %>
+          <%= flight.input :departure_date, as: :string, required: false, input_html: {class: "datepicker"} %>
+          <%= flight.input :return_date, as: :string, required: false, input_html: {class: "datepicker"} %>
         <% end %>
 
-        <h3><%= @trip.destination %> to <%= @trip.home %></h3>
+        <h3><%#= @trip.destination %> <%#= @trip.home %></h3>
         <hr>
-        <%= f.simple_fields_for :return_flight do |flight| %>
-          <%= flight.input :departure, collection: Airports.all.select {|airport| airport.country == @trip.destination}.sort_by(&:name), label_method: :name, value_method: :iata, input_html: { class: '' } %>
-          <%= flight.input :destination, collection: Airports.all.select {|airport| airport.country == @trip.home}.sort_by(&:name), label_method: :name, value_method: :iata, input_html: { class: '' } %>
-          <%= flight.input :date, as: :string, required: false, input_html: {class: "datepicker"} %>
-        <% end %>
+        <%#= f.simple_fields_for :return_flight do |flight| %>
+          <%#= flight.input :departure, collection: Airports.all.select {|airport| airport.country == @trip.destination}.sort_by(&:name), label_method: :name, value_method: :iata, input_html: { class: '' } %>
+          <%#= flight.input :destination, collection: Airports.all.select {|airport| airport.country == @trip.home}.sort_by(&:name), label_method: :name, value_method: :iata, input_html: { class: '' } %>
+          <%#= flight.input :date, as: :string, required: false, input_html: {class: "datepicker"} %>
+        <%# end %>
         <%= f.submit "Next", class: 'flight-submit' %>
 
       <% end %>
