--- a/app/views/trips/new.html.erb
+++ b/app/views/trips/new.html.erb
@@ -9,7 +9,7 @@
     </svg>
   </div>
 
-  <h2 style="margin: 32px 0px;">Review all Covid-19 flight regulations, and travel<br> stress-free!</h2>
+  <h2 style="margin: 16px 0px 32px 0px;">Review regulations<br> for stress-free travel!</h2>
 
 
   <div class="form">
