--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,6 +1,6 @@
 <%= image_tag "airp.jpg", class: "main-page-img" %>
 <%# <img src="https://images.unsplash.com/photo-1510832303954-cc30cbf2b8db" style="width:100%; height: 300px; object-fit: cover;">%>
-<div class="main-container">
+<div class="main-container" id="home-page-container">
 
 
   <h1>Discover <br>Covid-19 flight regulations</h1>
