--- a/app/assets/stylesheets/pages/_show.scss
+++ b/app/assets/stylesheets/pages/_show.scss
@@ -162,6 +162,10 @@
   border-radius: 7px;
 }
 
+.show-card-padding-bottom {
+  padding-bottom: 80px;
+}
+
 .header {
   // position: relative;
   margin: 30px auto;
