--- a/app/views/trips/show.html.erb
+++ b/app/views/trips/show.html.erb
@@ -20,6 +20,7 @@
   </div>
 </div>
   <!-- SVG + ✈ + COUNTRY CODES end -->
+
 <div class="container-show">
   <div class="top-show-card">
     <% if @trip.flights.any? %>
@@ -146,7 +147,7 @@
 </div>
 <!-- MODAL CARD 1 end -->
 
-<div class="container-show">
+<div class="container-show show-card-padding-bottom">
   <div class="show-card">
 
     <!-- flags and the name of the country -> change this to a flexbox-->
