--- a/app/assets/stylesheets/pages/_index.scss
+++ b/app/assets/stylesheets/pages/_index.scss
@@ -15,7 +15,7 @@
 
 .show-card-index{
   color: $brand;
-  padding: 0 20px;
+ // padding: 0 20px;
   // filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
   border-radius: 8px;
   margin-bottom: 0;
@@ -98,7 +98,7 @@
   color: $brand;
   padding: 16px 20px;
   border-radius: 14px;
-  // margin-bottom: 8px;
+  margin-bottom: 16px;
   // margin-top: 8px;
   p {
     margin: 0;
@@ -149,7 +149,7 @@
 
 .show-card-index-booked {
   color: $brand;
-  padding: 20px 20px 0 20px;
+  padding: 20px 0px 0 0px;
   // margin-bottom: -36px;
   // filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
   border-radius: 8px;
